# Flight-booking

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: build-apps.yml
client_app/: README.md  pubspec.yaml
client_app/android/app/: build.gradle.kts
client_app/android/app/src/main/: AndroidManifest.xml
client_app/android/app/src/main/kotlin/com/dhavalmajmundar/flight_companion/: MainActivity.kt
client_app/lib/: api_client.dart  main.dart
client_app/lib/screens/: dashboard_screen.dart  search_screen.dart  settings_screen.dart  watches_screen.dart
client_app/lib/widgets/: airport_field.dart
client_app/releases/: README.md
client_app/test/: widget_test.dart
client_app/windows/: CMakeLists.txt
client_app/windows/runner/: Runner.rc  main.cpp
flight_bot/: __init__.py  airports.py  api.py  bot.py  command_input.py  config.py  formatting.py  links.py  main.py  models.py  ranking.py  routestack.py  watch_store.py  watching.py
tests/: test_airports.py  test_api.py  test_command_input.py  test_commands.py  test_formatting.py  test_links.py  test_main.py  test_ranking.py  test_routestack.py  test_watching.py
