[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "on-demand-flight-bot"
version = "0.1.0"
description = "Telegram bot that searches and ranks live RouteStack flight offers on demand."
requires-python = ">=3.11"
dependencies = [
  "airportsdata>=2026.3.15,<2027",
  "asyncpg>=0.30,<1",
  "httpx>=0.27,<1",
  "python-dotenv>=1.0,<2",
  "python-telegram-bot[job-queue]>=21.6,<23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
flight-bot = "flight_bot.main:main"

[tool.setuptools.packages.find]
include = ["flight_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
